# TestWright

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  cli.py  debug_log.txt  docker-entrypoint.sh  pyproject.toml  verification_structure_spec.md
Dataset/Mifos/: Mifos.md
Dataset/Moodle/: MoodleStudent.md  MoodleTeacher.md
Dataset/PHPTravels/: PHPTravels.md
Dataset/Parabank/: Ground Truth.md  Parabank.md
Output/Mifos/: test-cases.json  test-cases.md
Output/Moodle/: test-cases-student.json  test-cases-student.md  test-cases-teacher.md  test-cases.json
Output/MoodleStudent/: test-cases.json
Output/MoodleTeacher/: test-cases.json
Output/PHPTravels/: test-cases.json  test-cases.md  verifications.json  verifications.md
Output/Parabank/: Test Cases(gpt 5 mini).json  Test Cases(gpt 5 mini).md  test-cases.json  test-cases.md  verifications.json  verifications.md
agents/: __init__.py  assembler.py  base.py  chunker.py  execution_planner.py  navigation.py  parser.py  plan_generator.py  standard_patterns.py  summary.py  test_generator.py  verification_planner.py  verify_flag.py  verify_ideal.py  verify_matcher.py
baselines/: README.md
baselines/few_shot/: README.md
baselines/single_prompt/: README.md
core/: generator.py  graph.py  nodes.py  reporter.py  state.py  verification_pipeline.py
dataset/: TestDataset.md
dataset/Mifos/: Mifos.md
dataset/Moodle/: MoodleStudent.md  MoodleTeacher.md
dataset/PHPTravels/: PHPTravels.md
dataset/Parabank/: Navigation.md  Parabank.md
dataset/SwagLabs/: SwagLab.json  SwagLab.md
dataset/ground_truth/: Mifos.md
exporters/: __init__.py  json_exporter.py  markdown_exporter.py  post_verification_markdown_exporter.py  verification_json_exporter.py  verification_markdown_exporter.py
framework/: __init__.py
framework/agents/: __init__.py  assembler.py  base.py  navigation.py  semantic_critic_agent.py  standard_patterns.py  summary.py  test_case_auditor.py  test_edge_agent.py  test_generator.py  ui_ast_agent.py  (+3 more)
models/: __init__.py  enums.py  schemas.py
outputs/: README.md
prompts/: semantic_critic.md  test_edge.md  test_negative.md  test_positive.md  ui_ast.md
(+39 files in other folders)
