[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "testwright"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = ["langgraph", "httpx"]

[project.scripts]
testwright = "testwright.cli:main"

[tool.setuptools]
packages = [
    "testwright",
    "testwright.agents",
    "testwright.core",
    "testwright.models",
    "testwright.exporters",
]

[tool.setuptools.package-dir]
testwright = "."
