[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autospectest"
version = "3.0.0"
description = "Automated test case generation from functional specifications using multi-agent orchestration."
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "litellm>=1.50",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "litellm>=1.50",
]

[project.scripts]
autospectest = "autospectest.cli:main"

[tool.setuptools]
packages = [
    "autospectest",
    "autospectest.prompts",
    "autospectest.framework",
    "autospectest.framework.orchestrator",
    "autospectest.framework.agents",
]

[tool.setuptools.package-dir]
autospectest = "."

[tool.setuptools.package-data]
"autospectest.prompts" = ["*.md"]
